Fix versionFile bumping (#5)
- Fixes version file bumping, so we can use it to self-version this repo.
- Fixes typo in workflow

--- a/.github/workflows/pr-close.yml
+++ b/.github/workflows/pr-close.yml
@@ -11,5 +11,5 @@ jobs:
         uses: deliveroo/label-semver-tagger.action@next
         with:
           repo-token: "${{ secrets.GITHUB_TOKEN }}"
-          default: versionFile
+          bump-script: versionFile
           tag-format: v${version}
